Code rewrite to use new Java language features
generated with OpenRewrite maven plugin, reviewed and tested

Signed-off-by: Johannes Echterhoff <echterhoff@interactive-instruments.de>